fixed: safari overflow by removing unsupported overflow-x: clip

--- a/frontend/fflernapp/src/components/mobile/MobileContentCardStyle.css
+++ b/frontend/fflernapp/src/components/mobile/MobileContentCardStyle.css
@@ -10,7 +10,6 @@
 
   color: #ea4138;
 
-  background-image: url(src/assets/driving-firefighters-filter.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
