--- a/frontend/fflernapp/src/components/mobile/MobileNavBarStyle.css
+++ b/frontend/fflernapp/src/components/mobile/MobileNavBarStyle.css
@@ -7,7 +7,6 @@ nav {
   width: 100%;
   min-height: 20vh;
   background-color: #05192a;
-  overflow-x: clip;
 }
 
 .nav-section {
